[gd_scene load_steps=5 format=2]

[ext_resource path="res://views/select_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/medio/medio_50.tres" type="DynamicFont" id=2]
[ext_resource path="res://main_theme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/medio/medio_20.tres" type="DynamicFont" id=4]

[node name="select_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.292206
margin_right = -0.292236
color = Color( 0.231373, 0.235294, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="layout"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="layout/VBoxContainer"]
margin_right = 720.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Who Knows the News"
align = 1

[node name="play_daily" type="Button" parent="layout/VBoxContainer"]
margin_top = 61.0
margin_right = 720.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play Today's Puzzle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="layout/VBoxContainer"]
margin_top = 318.0
margin_right = 720.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 10 )

[node name="play_prior_day" type="Button" parent="layout/VBoxContainer"]
margin_top = 338.0
margin_right = 720.0
margin_bottom = 380.0
size_flags_horizontal = 3
text = "Play a Prior Daily Puzzle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="custom_topic" type="Button" parent="layout/VBoxContainer"]
margin_top = 390.0
margin_right = 720.0
margin_bottom = 432.0
size_flags_horizontal = 3
text = "Create Puzzle from Topic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="layout/VBoxContainer"]
margin_top = 442.0
margin_right = 720.0
margin_bottom = 484.0
size_flags_horizontal = 3
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="layout/VBoxContainer"]
margin_top = 494.0
margin_right = 720.0
margin_bottom = 560.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Game by [url=\"theduckcow.com\"]Patrick W. Crawford (TheDuckCow)[/url]

Made for the 2021 [url=https://itch.io/jam/godot-fire-charity-jam-1]\"Godot Fire Charity Jam\"[/url] using the Godot game engine."
text = "Game by Patrick W. Crawford (TheDuckCow)

Made for the 2021 \"Godot Fire Charity Jam\" using the Godot game engine."
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="layout/VBoxContainer/play_daily" to="." method="_on_play_today_pressed"]
[connection signal="pressed" from="layout/VBoxContainer/custom_topic" to="." method="_on_custom_topic_pressed"]
[connection signal="pressed" from="layout/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
